# pkg/models/requests.go
@@ -16,6 +16,10 @@ type SignOutRequest struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
 type CreatePostRequest struct {
 	Title       string   `json:"title" db:"title" binding:"required"`
 	Description string   `json:"description" db:"description"`
